# sundown-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/app/: Controller.cpp  Controller.h  ServerController.cpp  ServerController.h
src/discovery/domain/: DiscoveredServer.h  DiscoveredServerRegistry.cpp  DiscoveredServerRegistry.h
src/discovery/infrastructure/: DiscoveryBroadcaster.cpp  UdpDiscoveryListener.cpp  UdpDiscoveryListener.h
src/discovery/ports/: DiscoveryBroadcaster.cpp  DiscoveryBroadcaster.h  DiscoveryPacket.h  IDiscoveryListener.h
src/domain/: IShutdownExecutor.h  IShutdownStateRepository.h  ShutdownSchedule.h  ShutdownScheduler.cpp  ShutdownScheduler.h  ShutdownState.cpp  ShutdownState.h
src/infrastructure/: FileShutdownStateRepository.h  InMemoryShutdownStateRepository.h  TestShutdownExecutor.h  WindowsShutdownExecutor.cpp  WindowsShutdownExecutor.h
src/infrastructure/network/discovery/: IDiscoveryListener.h  UdpDiscoveryListener.cpp  UdpDiscoveryListener.h
src/networking/messaging/domain/: ProtocolMessage.h  ProtocolMessageType.h  ServerState.h  SessionState.h
src/networking/messaging/infrastructure/: JsonSerializer.cpp  JsonSerializer.h
src/networking/session/domain/: SessionId.h  SessionManager.cpp  SessionManager.h  SessionState.h
src/networking/session/messaging/domain/: StateSnapshot.h
src/networking/session/messaging/infrastructure/: JsonSerializer.h
src/networking/session/transport/: TcpServer.cpp  TcpServer.h  TcpSession.cpp  TcpSession.h
src/networking/transport/tcp/: TcpServer.cpp  TcpSession.cpp  TcpSession.h
src/shutdown/domain/: ShutdownScheduler.cpp  ShutdownScheduler.h  ShutdownState.h
src/shutdown/infrastructure/: FileShutdownStateRepository.cpp  FileShutdownStateRepository.h  InMemoryShutdownStateRepository.h  WindowsShutdownExecutor.h
src/shutdown/ports/: IShutdownStateRepository.h
src/shutdown/tests/: TestShutdownExecutor.cpp  TestShutdownExecutor.h
src/tests/controller/: ControllerTest.cpp  ControllerTest.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
